Option to delete drug

--- a/www/res/custom.css
+++ b/www/res/custom.css
@@ -1,6 +1,9 @@
 .omit{
 	text-decoration: line-through;
 }
-.omit>td>button{
+.omit>td>button.nomit{
+	display: none;
+}
+.nomit>td>button.omit{
 	display: none;
 }
